Fix dark mode

--- a/src/styles/scss/home.scss
+++ b/src/styles/scss/home.scss
@@ -100,6 +100,27 @@
     color: rgb(196, 191, 183)!important;
   }
 
+  .signup-page .signup-container .signup-connect {
+    color: rgb(232, 230, 227)!important;
+    background-image: linear-gradient(134deg, rgb(155, 115, 4), rgb(179, 103, 5))!important;
+  }
+
+  .facebook-share-btn {
+    background-color: rgb(47, 70, 121)!important;
+  }
+
+  .twitter-share-btn {
+    background-color: rgb(15, 91, 150)!important;
+  }
+
+  .pinterest-share-btn {
+    background-color: rgb(161, 43, 27)!important;
+  }
+
+  .linkedin-share-btn {
+    background-color: rgb(0, 129, 175)!important;
+  }
+
   // Profile page
   .profile-page {
     background-color: rgb(24, 26, 27)!important;
