--- a/src/styles/scss/user.scss
+++ b/src/styles/scss/user.scss
@@ -57,7 +57,7 @@
 .twitter-share-btn {
   background-color: hsl(206, 82%, 63%);
 }
-.google-share-btn {
+.pinterest-share-btn {
   background-color: hsl(7, 71%, 55%); 
 }
 .linkedin-share-btn {
